--- a/myproject/index.html
+++ b/myproject/index.html
@@ -19,8 +19,75 @@
             <div><img id="shopping-cart" src="images/shopping-cart.png" alt="Корзина"></div>
         </div>
     </nav>
-    <main>
+    <div id="homepage">
+        <div id="special">
+            <h2>Сезонные скидки</h2>
+            <div id="items">
+                <div class="product-card">
+                    <a href="_blank" class="product-card-image">
+                        <img src="images/amd1.jpg">
+                    </a>
+                    <div class="product-card-price-info">
+                        <div class="product-card-price"><strong>13 000 ₽</strong></div>
+                        <div class="product-card-prev-price"><s>14 300</s></div>
+                    </div>
+                    <a href="_blank" class="product-card-title">Процессор AMD Ryzen 5 7500f OEM</a>
+                    <div class="product-card-rating-div">
+                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" data-gtm-vis-has-fired32166084_3782="1"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.4496 0.672448L4.07058 3.43241C3.98127 3.61117 3.80862 3.73507 3.60892 3.76373L0.525404 4.20625C0.0230754 4.27857 -0.178248 4.88907 0.185844 5.23983L2.41753 7.38862C2.56203 7.52775 2.62798 7.72821 2.59389 7.92467L2.06741 10.9587C1.98127 11.4527 2.50696 11.8308 2.95641 11.5971L5.71495 10.1644C5.8936 10.0716 6.10705 10.0716 6.28569 10.1644L9.04317 11.597C9.49194 11.8304 10.0183 11.4538 9.93235 10.9587L9.40587 7.92467C9.37178 7.72821 9.43773 7.52775 9.58223 7.38862L11.814 5.23971C12.178 4.88949 11.9776 4.2787 11.4745 4.20627L8.39084 3.76373C8.19113 3.73507 8.01849 3.61117 7.92918 3.43241L6.55003 0.672183C6.32551 0.222563 5.67536 0.221666 5.4496 0.672448Z" fill="#FFA319" data-gtm-vis-has-fired32166084_3782="1"></path></svg>
+                        <div class="product-card-rating"><strong>4.9</strong> |</div>
+                        <div class="product-card-opinion">389 отзывов</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <a href="_blank" class="product-card-image">
+                        <img src="images/4060.jpg">
+                    </a>
+                    <div class="product-card-price-info">
+                        <div class="product-card-price"><strong>28 999 ₽</strong></div>
+                        <div class="product-card-prev-price"><s>32 999</s></div>
+                    </div>
+                    <a href="_blank" class="product-card-title">Видеокарта Palit GeForce RTX 4060 Dual</a>
+                    <div class="product-card-rating-div">
+                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" data-gtm-vis-has-fired32166084_3782="1"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.4496 0.672448L4.07058 3.43241C3.98127 3.61117 3.80862 3.73507 3.60892 3.76373L0.525404 4.20625C0.0230754 4.27857 -0.178248 4.88907 0.185844 5.23983L2.41753 7.38862C2.56203 7.52775 2.62798 7.72821 2.59389 7.92467L2.06741 10.9587C1.98127 11.4527 2.50696 11.8308 2.95641 11.5971L5.71495 10.1644C5.8936 10.0716 6.10705 10.0716 6.28569 10.1644L9.04317 11.597C9.49194 11.8304 10.0183 11.4538 9.93235 10.9587L9.40587 7.92467C9.37178 7.72821 9.43773 7.52775 9.58223 7.38862L11.814 5.23971C12.178 4.88949 11.9776 4.2787 11.4745 4.20627L8.39084 3.76373C8.19113 3.73507 8.01849 3.61117 7.92918 3.43241L6.55003 0.672183C6.32551 0.222563 5.67536 0.221666 5.4496 0.672448Z" fill="#FFA319" data-gtm-vis-has-fired32166084_3782="1"></path></svg>
+                        <div class="product-card-rating"><strong>4.7</strong> |</div>
+                        <div class="product-card-opinion">214 отзывов</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <a href="_blank" class="product-card-image">
+                        <img src="images/adata32.jpg">
+                    </a>
+                    <div class="product-card-price-info">
+                        <div class="product-card-price"><strong>8 999 ₽</strong></div>
+                        <div class="product-card-prev-price"><s>9 999</s></div>
+                    </div>
+                    <a href="_blank" class="product-card-title">Оперативная память ADATA XPG Lancer Blade</a>
+                    <div class="product-card-rating-div">
+                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" data-gtm-vis-has-fired32166084_3782="1"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.4496 0.672448L4.07058 3.43241C3.98127 3.61117 3.80862 3.73507 3.60892 3.76373L0.525404 4.20625C0.0230754 4.27857 -0.178248 4.88907 0.185844 5.23983L2.41753 7.38862C2.56203 7.52775 2.62798 7.72821 2.59389 7.92467L2.06741 10.9587C1.98127 11.4527 2.50696 11.8308 2.95641 11.5971L5.71495 10.1644C5.8936 10.0716 6.10705 10.0716 6.28569 10.1644L9.04317 11.597C9.49194 11.8304 10.0183 11.4538 9.93235 10.9587L9.40587 7.92467C9.37178 7.72821 9.43773 7.52775 9.58223 7.38862L11.814 5.23971C12.178 4.88949 11.9776 4.2787 11.4745 4.20627L8.39084 3.76373C8.19113 3.73507 8.01849 3.61117 7.92918 3.43241L6.55003 0.672183C6.32551 0.222563 5.67536 0.221666 5.4496 0.672448Z" fill="#FFA319" data-gtm-vis-has-fired32166084_3782="1"></path></svg>
+                        <div class="product-card-rating"><strong>4.5</strong> |</div>
+                        <div class="product-card-opinion">87 отзывов</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <a href="_blank" class="product-card-image">
+                        <img src="images/msib650.jpg">
+                    </a>
+                    <div class="product-card-price-info">
+                        <div class="product-card-price"><strong>15 299 ₽</strong></div>
+                        <div class="product-card-prev-price"><s>16 999</s></div>
+                    </div>
+                    <a href="_blank" class="product-card-title">Материнская плата MSI B650 GAMING PLUS WIFI</a>
+                    <div class="product-card-rating-div">
+                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" data-gtm-vis-has-fired32166084_3782="1"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.4496 0.672448L4.07058 3.43241C3.98127 3.61117 3.80862 3.73507 3.60892 3.76373L0.525404 4.20625C0.0230754 4.27857 -0.178248 4.88907 0.185844 5.23983L2.41753 7.38862C2.56203 7.52775 2.62798 7.72821 2.59389 7.92467L2.06741 10.9587C1.98127 11.4527 2.50696 11.8308 2.95641 11.5971L5.71495 10.1644C5.8936 10.0716 6.10705 10.0716 6.28569 10.1644L9.04317 11.597C9.49194 11.8304 10.0183 11.4538 9.93235 10.9587L9.40587 7.92467C9.37178 7.72821 9.43773 7.52775 9.58223 7.38862L11.814 5.23971C12.178 4.88949 11.9776 4.2787 11.4745 4.20627L8.39084 3.76373C8.19113 3.73507 8.01849 3.61117 7.92918 3.43241L6.55003 0.672183C6.32551 0.222563 5.67536 0.221666 5.4496 0.672448Z" fill="#FFA319" data-gtm-vis-has-fired32166084_3782="1"></path></svg>
+                        <div class="product-card-rating"><strong>4.8</strong> |</div>
+                        <div class="product-card-opinion">155 отзывов</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="everything">
 
+        </div>
     </main>
 </body>
 </html>
