--- a/myproject/index.html
+++ b/myproject/index.html
@@ -8,15 +8,21 @@
 </head>
 <body>
     <nav>
-        <div id="logo-name">
-            <img id="logo" src="images/logo.png" alt="Логотип">
-            <h1>Amazing PC</h1>
-        </div>
-        
-        <div id="navbar">
-            <div><h3>КАТАЛОГ</h3></div>
-            <div><h3>КОНТАКТЫ</h3></div>
-            <div><img id="shopping-cart" src="images/shopping-cart.png" alt="Корзина"></div>
+        <div id="header">
+            <div id="logo-name">
+                <img id="logo" src="images/logo.png" alt="Логотип">
+                <h1>Amazing PC</h1>
+            </div>
+            
+            <div id="navbar">
+                <div class="nav-buttons">
+                    <a href="_blank">КАТАЛОГ</a>
+                    <a href="_blank">КОНТАКТЫ</a>
+                </div>
+                <div class="shopping-cart">
+                    <img src="images/shopping-cart.png" alt="Корзина">
+                </div>
+            </div>
         </div>
     </nav>
     <div id="homepage">
