--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
-    <!-- Навигация -->
     <nav>
         <div id="header">
             <div id="logo-name">
@@ -37,7 +36,6 @@
         </div>
     </nav>
 
-    <!-- Hero-блок -->
     <section class="hero">
         <div class="hero-content">
             <h1>Соберите свой идеальный ПК</h1>
@@ -54,7 +52,7 @@
         <div id="window">
             <h2>Сезонные скидки</h2>
             <div id="items">
-                <!-- Товары будут загружаться динамически -->
+                <!-- Товары -->
             </div>
         </div>
         
